# changelog-gh-usernames

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  build.rs  sqlx-data.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: CI.yml
.sqlx/: query-544770c1776073b8644268067f28ca81c18d6d2c864e1d8f8dc1f38a6ba8b866.json  query-8680d160d8cc44e8331c1bbbd204ba7a19f0155bac315caf5fb101d46ce9171b.json
migrations/: 20230429190244_create-users-table.up.sql
src/: cli.rs  db.rs  emails.rs  main.rs  pull_request.rs
