[package]
name = "changelog-gh-usernames"
version = "0.1.0"
authors = ["Sanchith Hegde <sanchith.hegde01@gmail.com>"]
edition = "2021"
rust-version = "1.64"
description = "A simple application to find and replace emails in changelogs with GitHub usernames."
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
octorust = { version = "0.3.2", features = ["rustls-tls"] }
once_cell = "1.18.0"
regex = "1.8.4"
sqlx = { version = "0.6.3", features = ["offline", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.28.2", features = ["macros", "rt"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
