[package]
name = "changelog-gh-usernames"
version = "0.1.0"
authors = ["Sanchith Hegde <sanchith.hegde01@gmail.com>"]
edition = "2021"
rust-version = "1.64"
description = "A simple application to find and replace emails in changelogs with GitHub usernames."
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.12", features = ["derive"] }
octorust = { version = "0.3.2", features = ["rustls-tls"] }
once_cell = "1.18.0"
regex = "1.9.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.29.1", features = ["macros", "rt"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
